added coding with basic css

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -1,8 +1,15 @@
 <html>
+
 	<head>
-		<title>Sinatra Framework</title>
+	<link rel="stylesheet" type="text/css" href="css/application.css">
+		<title>my title</title>
 	</head>
 	<body>
+
+	<div class="container" style=''> 
+	<h1 class="page-title">THE LINK KNOWS ALL. SO CAN YOU</h1>
+		<a href="/profile">this is my profile</a>
 		<%= yield %>
+		</div>
 	</body>
 </html>
