--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -1,15 +1,24 @@
 <html>
 
 	<head>
-	<link rel="stylesheet" type="text/css" href="css/application.css">
+	<link rel="stylesheet" type="text/css" href="/css/application.css">
+	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 		<title>my title</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/application.js"></script>
 	</head>
 	<body>
-
 	<div class="container" style=''> 
+	<div class="topnav">
+   <p class="fancy">SIVA -- Bitly Clone</p>
+</div>
+	<div class='disappear'>
+		<p class="inst_header">If you click on me, i will disappear</p>
+		<p>Instruction : Copy and paste the long link address and click submit </p>
+		<p>              It will generate the new short link for you</p>
+	</div>
 	<h1 class="page-title">THE LINK KNOWS ALL. SO CAN YOU</h1>
-		<a href="/profile">this is my profile</a>
 		<%= yield %>
-		</div>
+	</div>	
 	</body>
 </html>
