added jQuery-onpaste method

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -3,20 +3,20 @@
 	<head>
 	<link rel="stylesheet" type="text/css" href="/css/application.css">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-		<title>my title</title>
+		<title>Bitly Clone</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
 	</head>
 	<body>
 	<div class="container" style=''> 
 	<div class="topnav">
-   <p class="fancy">SIVA -- Bitly Clone</p>
+   <p class="fancy">Siva -- Bitly Clone</p>
 </div>
-	<div class='disappear'>
+	<!-- <div class='disappear'>
 		<p class="inst_header">If you click on me, i will disappear</p>
 		<p>Instruction : Copy and paste the long link address and click submit </p>
 		<p>              It will generate the new short link for you</p>
-	</div>
+	</div> -->
 	<h1 class="page-title">THE LINK KNOWS ALL. SO CAN YOU</h1>
 		<%= yield %>
 	</div>	
