--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,7 +7,7 @@
 	background-size: 1350px 550px;
 	padding: 0px 0px;
 	width: 100%;
-	height: 530px;
+	height: 100%;
 /*	background-size: container;*/
 } 
 
