--- a/public/css/application.css
+++ b/public/css/application.css
@@ -4,7 +4,7 @@
 .container{
 	background-image: url("../img/grass.jpg");
 	background-position: bottom center;
-	/*background-size: 1350px 550px;*/
+	background-size: 100%;
 	padding: 0px 0px;
 	width: 100%;
 	height: 100%;
