--- a/public/css/application.css
+++ b/public/css/application.css
@@ -15,7 +15,7 @@
 	font-family: "brandon-grotesque","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-weight: 5000;
 	font-size: 36px;
-	color: black;
+	color: white;
 	line-height: 28px;
 	text-align: center;
 	padding-top: 20px;
